lib/flux/apps/web/apex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apex
  labels:
    app.kubernetes.io/name: apex
    app.kubernetes.io/instance: apex
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: web
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: apex
      app.kubernetes.io/instance: apex
  template:
    metadata:
      labels:
        app.kubernetes.io/name: apex
        app.kubernetes.io/instance: apex
        app.kubernetes.io/component: web
        app.kubernetes.io/part-of: web
    spec:
      enableServiceLinks: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: nginx
          image: docker.io/nginxinc/nginx-unprivileged:1.31.6-alpine@sha256:b9241c6e7b8e9a862f129d8d4199ab64b10390949a78bdd5603379b32c844083 # {"$imagepolicy": "web:nginx"}
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
              readOnly: true
            - name: well-known-matrix
              mountPath: /srv/www/.well-known/matrix
              readOnly: true
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: 5m
              memory: 16Mi
            limits:
              memory: 64Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 30
      volumes:
        - name: config
          configMap:
            name: apex-nginx
        - name: well-known-matrix
          configMap:
            name: apex-well-known-matrix
        - name: tmp
          emptyDir: {}
