lib/flux/apps/web/apex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apex
  labels:
    app.kubernetes.io/name: apex
    app.kubernetes.io/instance: apex
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: web
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/name: apex
    app.kubernetes.io/instance: apex
